--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WeatherPy"
+    "# WeatherPy\n",
+    "#### Observations\n",
+    "\n",
+    "* As latitude approaches 0&deg;, the maximum temperature of a city increases. This supports the idea that the weather gets hotter as one approaches the equator. Though it is noteworthy to point out that, of the given data set, maximum temperature peaks between 20&deg;N and 40&deg;N, rather than at the equator.\n",
+    "\n",
+    "\n",
+    "* It appears that the majority of cities in the data set have humidity levels between 60-100%, regardless of latitude. However, cities with low humidity levels (0-20%) are mostly concentrated to latitudes between 20&deg;N and 40&deg;N.\n",
+    "\n",
+    "\n",
+    "* Like humidity, a city's wind speed does not seem to be as influenced by latitude as maximum temperature is. The majority of cities have a wind speed between 0-4 mph across the latitudinal range of 60&deg;S and 80&deg;N."
    ]
   },
   {
@@ -20,7 +29,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "import time\n",
     "\n",
     "# Import API key\n",
     "from api_keys import api_key\n",
@@ -79,16 +87,6 @@
     "\n",
     "# Print the city count to confirm sufficient count\n",
     "len(cities)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(cities)\n",
-    "df[0].value_counts().sort_index().sort_values()"
    ]
   },
   {
@@ -1052,13 +1050,6 @@
    "source": [
     "df.to_csv(output_data_file)\n",
     "df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plotting the Data"
    ]
   },
   {
